components/kargo/kargo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: kargo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kargo
    app.kubernetes.io/version: v0.1.0
    helm.sh/chart: kargo-0.1.0
  name: kargo-api
  namespace: kargo
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: kargo-api
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - localhost
    secretName: kargo-api-ingress-cert
